# backend/app/api/swagger.json
@@ -343,7 +343,7 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": ["email", "password", "name"],
+                "required": ["email", "password", "firstName", "lastName", "address", "phone", "birthDate", "city"],
                 "properties": {
                   "email": {
                     "type": "string"
@@ -351,7 +351,23 @@
                   "password": {
                     "type": "string"
                   },
-                  "name": {
+                  "firstName": {
+                    "type": "string"
+                  },
+                  "lastName": {
+                    "type": "string"
+                  },
+                  "address": {
+                    "type": "string"
+                  },
+                  "phone": {
+                    "type": "string"
+                  },
+                  "birthDate": {
+                    "type": "string",
+                    "format": "date"
+                  },
+                  "city": {
                     "type": "string"
                   }
                 }
@@ -413,7 +429,23 @@
           "email": {
             "type": "string"
           },
-          "name": {
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "address": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
+          },
+          "birthDate": {
+            "type": "string",
+            "format": "date"
+          },
+          "city": {
             "type": "string"
           },
           "role": {
@@ -432,7 +464,7 @@
       },
       "UserInput": {
         "type": "object",
-        "required": ["email", "password", "name"],
+        "required": ["email", "password", "firstName", "lastName", "address", "phone", "birthDate", "city"],
         "properties": {
           "email": {
             "type": "string"
@@ -440,7 +472,23 @@
           "password": {
             "type": "string"
           },
-          "name": {
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "address": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
+          },
+          "birthDate": {
+            "type": "string",
+            "format": "date"
+          },
+          "city": {
             "type": "string"
           },
           "role": {
@@ -455,7 +503,23 @@
           "email": {
             "type": "string"
           },
-          "name": {
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "address": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
+          },
+          "birthDate": {
+            "type": "string",
+            "format": "date"
+          },
+          "city": {
             "type": "string"
           },
           "role": {
